--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>GBRP</title>
-    <link id="favicon" rel="icon" sizes="16x16" href="../img/favicon.ico">
-    <link rel="stylesheet" href="../css/style.css">
+    <link id="favicon" rel="icon" sizes="16x16" href="../GBRP/img/favicon.ico">
+    <link rel="stylesheet" href="../GBRP/style.css">
     <script src="https://kit.fontawesome.com/c64b81933c.js" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
             <i class="fa-solid fa-bars"></i>
         </button>
 
-        <img src="../img/logo.png" id="logo" class="rounded" alt="logo">
+        <img src="../GBRP/img/logo.png" id="logo" class="rounded" alt="logo">
 
     </header>
 
